# runtui

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: __init__.md  app.md  demo_app.md  rad_designer.md  tui_os.md
docs/backend/: __init__.md  base.md  detect.md  unix.md  windows.md
docs/core/: __init__.md  event.md  event_loop.md  key_encode.md  keys.md  pty_process.md  timer.md  types.md  unicode.md
docs/dialogs/: __init__.md  base.md  file_open.md  file_save.md  form.md  message.md
docs/layout/: __init__.md  absolute.md  base.md  box.md  dock.md  grid.md
docs/mouse/: __init__.md  cursor.md  tracker.md
docs/rad/: __init__.md  codegen.md  deserializer.md  design_surface.md  menu_editor.md  runner.md  schema.md  serializer.md
docs/rendering/: __init__.md  buffer.md  painter.md  screen.md
docs/themes/: __init__.md  black_white.md  dark.md  engine.md  github.md  gruvbox.md  high_contrast.md  legacy_system.md  light.md  nord.md  solarized.md  turbo_vision.md  vscode.md
docs/widgets/: __init__.md  base.md  button.md  calendar.md  checkbox.md  color_picker.md  container.md  context_menu.md  dropdown.md  image.md  input.md  label.md  listbox.md  menu.md  password.md  progressbar.md  radio.md  scrollbar.md  static_image.md  syntax.md  terminal.md  terminal_pipe.md  textarea.md
docs/windows/: __init__.md  taskbar.md  window.md  window_manager.md
examples/: cal.py  calc.py  chatbox.py  clock.py  demo_app.py  key_caps.py  mine.py  notes.py  puzzle.py  rad_designer.py  screenshot.py  trome.md  trome.py  tui_os.md  tui_os.py
runtui/: __init__.py  app.py  rad_designer.py  tui_os.py
runtui/backend/: __init__.py  base.py  detect.py  input_decoder.py  unix.py  windows.py
runtui/core/: __init__.py  event.py  event_loop.py  key_encode.py  keys.py  pty_process.py  timer.py  types.py  unicode.py
runtui/dialogs/: __init__.py  base.py  file_open.py  file_save.py  form.py  message.py
runtui/layout/: __init__.py  absolute.py  base.py  box.py  dock.py  grid.py
runtui/mouse/: __init__.py  cursor.py  tracker.py
runtui/rad/: __init__.py  codegen.py  deserializer.py  design_surface.py  menu_editor.py  runner.py  schema.py  serializer.py
runtui/rendering/: __init__.py  buffer.py  painter.py  screen.py
runtui/themes/: __init__.py  black_white.py  dark.py  engine.py  github.py  gruvbox.py  (+7 more)
(+27 files in other folders)
