[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runtui"
version = "0.1.2"
description = "Modern pure-Python cross-platform TUI framework with RAD designer, themes, mouse support, embedded terminals, and rich widgets"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"} 
authors = [
  {name = "Erickrus", email = "hyinghao@gmail.com"},
]
keywords = ["tui", "terminal-ui", "curses-alternative", "rad", "mouse", "widgets"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    "send2trash",
    "Pillow",
  "pyte",
  "pywinpty; platform_system == 'Windows'"
]
[project.urls]
Homepage = "https://github.com/erickrus/runtui"
Repository = "https://github.com/erickrus/runtui"
"Bug Tracker" = "https://github.com/erickrus/runtui/issues"
Documentation = "https://github.com/erickrus/runtui#readme"

[tool.hatch.build.targets.wheel]
packages = ["runtui"]
